--- a/package.json
+++ b/package.json
@@ -1,11 +1,1 @@
-{"dependencies":
-  {"bootstrap":"^5.3.2",
-  "express":"^4.18.2",
-  "node":"^21.6.0"},
-"devDependencies":
-  {"nodemon":"^3.0.3"},
-  "scripts" : {
-  "start" : "nodemon server.js"
-  }
-}
-  
+{"dependencies":{"bootstrap":"^5.3.2","express":"^4.18.2","node":"^21.6.0"},"devDependencies":{"eslint":"^8.56.0","eslint-config-standard":"^17.1.0","eslint-plugin-import":"^2.29.1","eslint-plugin-n":"^16.6.2","eslint-plugin-promise":"^6.1.1","nodemon":"^3.0.3"},"scripts":{"start":"nodemon server.js"}}
